# rofi-menu-stack

./: .gitignore  COPYING  Cargo.toml  README.md  flake.nix  lib.nix  lib.sh  run_sample.sh
sample/: debug.sh  decrementor.sh  fib.sh  incrementor.sh
src/: fallback_row.rs  main.rs  options.rs  row.rs  row2.rs  stack_op.rs  stack_op2.rs
