[package]
name = "rofi-menu-stack"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.22"
json5 = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
